Implementing todos-render.component

--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <title>FeathersJS - Quick Start</title>
 
@@ -12,6 +13,7 @@
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="node_modules/angular2/bundles/router.js"></script>
     <script src="node_modules/socket.io-client/socket.io.js"></script>
     <script src="node_modules/feathers-client/dist/feathers.js"></script>
 
