--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>FeathersJS - Quick Start</title>
 
     <!-- Load styles -->
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Load libraries -->
     <script src="node_modules/es6-shim/es6-shim.js"></script>
